# AcreOS

./: .dockerignore  .env.development.local  .env.example  .eslintrc.json  .gitignore  .replit  CHANGELOG.md  CLOUD_SMOKE_TEST.txt  Dockerfile  GENIUS_IMPLEMENTATION_STATUS.md  NATIVE_APPS.md  README.md  capacitor.config.ts  docker-compose.yml  fly.toml  package-lock.json  package.json  playwright.config.ts  replit.md  tailwind.config.ts  tsconfig.check.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
attached_assets/: Pasted--AcreOS-Lead-Scoring-Roadmap-This-roadmap-translates-th_1767811372604.txt  Pasted-AcreOS-Development-Roadmap-Current-Strengths-Your-platf_1767890957834.txt  added_data_sources_1767800690420.csv  added_data_sources_1767800690420.json  dkim-dns-records_1767636071748.csv  dmarc-dns-records_1767636071750.csv
client/: index.html  requirements.md
docs/: LAUNCH-DAY-CHECKLIST.md  OWNERS-MANUAL.md  api-reference.md  cloudflare-cdn-setup.md  deployment.md  developer-guide.md  disaster-recovery.md  oz-cloud-agent.md  research-land-investing-intelligence.md  rollback.md  scaling.md  security-audit.md  security.md  slo-monitoring.md
migrations/: 0000_sleepy_betty_ross.sql  0001_brief_giant_man.sql  0002_puzzling_millenium_guard.sql  0003_enrichment_columns.sql  0004_user_map_layer_preferences.sql  0005_ai_model_configs.sql  0006_goals_portfolio_push.sql  0007_composite_indexes.sql  0007_password_reset_tokens.sql  (+11 more)
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
(+928 files in other folders)
